# AutoPluginSystem

./: .gitignore  README.md
AutoPluginSystem/: CMakeLists.txt
AutoPluginSystem/include/: AutoPluginABI.h  AutoPluginDef.h  AutoPluginDriverAPI.h  AutoPluginManager.h  AutoPluginRegister.h
AutoPluginSystem/include/common/: IniReader.h  common.h  iniOperator.h
AutoPluginSystem/include/common/configParser/: IConfigParser.h  IniOperator.h
AutoPluginSystem/include/driverManage/: AutoPluginDriverAPI.h  AutoPluginDriverManager.h  BaseDriverAPI.h  DriverDef.h  DriverInfoManager.h  DriverInstaller.h  DriverLoader.h  DriverManager.h  DriverRTTIInfo.h  SystemDriverRequireInfoManager.h
AutoPluginSystem/include/pluginManage/: AutoPluginManager.h  IPluginInstaller.h  InstallOperator.h  PluginDef.h  PluginInfoManager.h  PluginInfoMannager.h  PluginInstallInfoMannager.h  PluginInstance.h  PluginManager.h
AutoPluginSystem/include/threadpool/: ThreadPoolLockFree.h
AutoPluginSystem/src/: AutoPlugin.cpp  AutoPluginDriverManager.cpp  AutoPluginManager.cpp  TempServer.cpp
AutoPluginSystem/src/common/: IniReader.cpp  common.cpp  iniOperator.cpp
AutoPluginSystem/src/common/configParser/: IniOperator.cpp
AutoPluginSystem/src/driverManage/: DriverInfoManager.cpp  DriverInstaller.cpp  DriverLoader.cpp  DriverManager.cpp  DriverRTTIInfo.cpp  SystemDriverRequireInfoManager.cpp
AutoPluginSystem/src/iniTemplate/: driver_info.ini  driver_require.ini  plugin_info.ini
AutoPluginSystem/src/pluginManage/: AutoPluginManager.cpp  InstallOperator.cpp  PluginInfoManager.cpp  PluginInfoMannager.cpp  PluginInstallInfoMannager.cpp  PluginInstance.cpp  PluginManager.cpp
CustomerSDK/: AutoPluginABI.h  AutoPluginAPI.cpp  AutoPluginAPI.h  AutoPluginCustomer.cpp  AutoPluginExport.h  CMakeLists.txt
DriverSDK/: CMakeLists.txt
DriverSDK/include/: BaseDriverAPI.h  Driver.h
DriverSDK/src/: AutoPluginDriverAPI.cpp  Driver.cpp
PluginSDK/: CMakeLists.txt
test/Customer/: AutoPluginCustomer.cpp  CMakeLists.txt
test/Customer/include/: AutoPluginABI.h  AutoPluginAPI.h  AutoPluginAPI_static.lib
